--- a/src/index.css
+++ b/src/index.css
@@ -14,20 +14,20 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+  box-sizing: border-box;
 }
 
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
+  min-height: 100vh;
+  background: #f8f9fa;
+}
+
+#root {
+  width: 100%;
   min-height: 100vh;
 }
 
@@ -36,11 +36,13 @@ h1 {
   line-height: 1.1;
 }
 
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
 }
 
 button {
